--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <nav>
 	<a routerLink="/dashboard">Dashboard</a>
-	<a routerLink="/heroes">Heroes</a>
+	<a routerLink="/heroes">My GitHub repositories</a>
 </nav>
 
 <router-outlet></router-outlet>
